--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
-    "morgan": "^1.9.1",
-    "prop-types": "^15.7.2",
-    "react-router-dom": "^5.0.0"
+    "morgan": "^1.9.1"
   },
   "engines": {
     "node": "10.15.0"
